<resources>
    <string name="app_name">Filmapp</string>
    <string name="activity_signin">Sign in</string>



    <string name="activity_account">Account</string>
    <string name="logout">Logout</string>
    <string name="notloggedin">You are not logged in!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">create account</string>
    <string name="activity_home">Home</string>
    <string name="activity_register">Register</string>
    <string name="create_an_account">create a new account</string>
    <string name="username">User name</string>
    <string name="register">create account</string>
    <string name="activity_watchlist">Watchlist</string>
    <string name="activity_search">Search</string>
    <string name="nav_home">Home</string>
    <string name="nav_watchlist">Watchlist</string>
    <string name="nav_search">Search</string>
    <string name="nav_account">Account</string>
    <string name="title_name">Shamil Lazar</string>
    <string name="subtitle_details">from Berlin asdasdasda</string>
    <string name="settings">Settings</string>


    <string name="text_header">Text</string>
    <string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.
		Mauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus,
		a pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est.
		Vestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus.
		Aliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit,
		risus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl,
		id efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante.
		Aenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae,
		aliquet quis orci. Curabitur maximus augue ut bibendum sagittis.
	</string>
    <string name="log_out">log out</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="open_cam">open cam</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>


</resources>
