<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/white">




    <TextView
        android:id="@+id/text_view_create_an_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_double"
        android:layout_marginStart="@dimen/spacing_double"
        android:layout_marginTop="@dimen/spacing_double"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.shamildev.retro.retroimage.views.RetroProfileImageView
        android:id="@+id/retroProfileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_create_an_account">

    </com.shamildev.retro.retroimage.views.RetroProfileImageView>

    <Button
        android:id="@+id/btn_edit_pic"
        style="@style/RoundedCornerButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="edit"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="@+id/retroProfileImage"
        app:layout_constraintTop_toTopOf="@+id/retroProfileImage"
        app:layout_constraintVertical_bias="0.37" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_username"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="@dimen/spacing_double"
        android:layout_marginStart="@dimen/spacing_double"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retroProfileImage">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_double"
        android:layout_marginStart="@dimen/spacing_double"
        android:layout_marginTop="@dimen/spacing_double"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_username">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_double"
        android:layout_marginStart="@dimen/spacing_double"
        android:layout_marginTop="@dimen/spacing_double"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_huge"
        android:layout_marginStart="@dimen/spacing_huge"
        android:layout_marginTop="@dimen/spacing_double"
        android:enabled="true"
        style="@style/RoundedCornerButtonFill"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retroprofile_imageview" />






</android.support.constraint.ConstraintLayout>
